fixed the alignment of the cancel button

--- a/src/modals/help/help-modal.scss
+++ b/src/modals/help/help-modal.scss
@@ -3,5 +3,10 @@ help-modal{
         .top-card{
             text-align: center
         }
+        .bottom-button{
+            text-align: center;
+            width: 50% !important;
+            margin-left: 25%;
+        }
     }
 }
